--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,10 +12,10 @@
 }
 
 body {
-  
-  background: linear-gradient(90deg, rgba(201,231,255,1) 0%, rgba(201,231,255,1) 50%, rgba(39,131,243,0.6867997198879552) 100%);
-
  
+  background: linear-gradient(90deg, rgba(201, 231, 255, 1) 0%, rgba(201, 231, 255, 1) 50%, rgba(39, 131, 243, 0.6867997198879552) 100%);
+
+
 
 }
 
@@ -49,16 +49,19 @@ button {
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  margin-bottom: 50px;
 }
 
 
 ::-webkit-scrollbar {
   width: 10px;
 }
+
 ::-webkit-scrollbar-thumb:hover {
-  background-color:$primary-color;
- 
+  background-color: $primary-color;
+
 }
+
 ::-webkit-scrollbar-track {
   background-color: #f1f1f1;
 }
@@ -69,5 +72,15 @@ button {
 
 
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  width: 100%;
+  height: 100vh;
+}
+
+body {
+  margin: 0;
+  font-family: poppins, "Helvetica Neue", sans-serif;
+}
+
+
